# deltadir

./: README.md  pyproject.toml  setup.py
deltadir/: __init__.py  __main__.py  cli.py
